# openapi/index.yaml
@@ -80,7 +80,7 @@ components:
           type: "string"
 
 paths:
-  /auth/register:
+  /api/auth/register:
     post:
       summary: Create a new user
       requestBody:
@@ -92,7 +92,7 @@ paths:
       responses:
         "201":
           description: User created successfully
-  /auth/authenticate:
+  /api/auth/authenticate:
     post:
       summary: Obtain token credentials given username and password
       requestBody:
@@ -110,11 +110,11 @@ paths:
                 $ref: "#/components/schemas/TokenResponse"
         "401":
           description: Token not obtained. Credentials not matched.
-  /establishment/:
+  /api/establishment/:
     post:
       summary: Create a food establishment
       security:
-        - tokenHeader: []
+        - tokenHeader: [ ]
       requestBody:
         required: true
         content:
@@ -124,11 +124,11 @@ paths:
       responses:
         "201":
           description: Food establishment created successfully
-  /establishment/all:
+  /api/establishment/all:
     post:
       summary: Get establishment
       security:
-        - tokenHeader: []
+        - tokenHeader: [ ]
       responses:
         "200":
           description: Food establishment get all successfully
@@ -143,7 +143,7 @@ paths:
                       $ref: "#/components/schemas/FoodEstablishmentCreateRequestBody"
                   message:
                     type: string
-  /reference/youtube/:
+  /api/reference/youtube/:
     post:
       summary: "POST reference/youtube/"
       operationId: "create"
@@ -160,7 +160,7 @@ paths:
             "*/*":
               schema:
                 $ref: "#/components/schemas/YoutubeReference"
-  /reference/youtube/all:
+  /api/reference/youtube/all:
     get:
       summary: "GET reference/youtube/all"
       operationId: "getAll"
