# src/main/java/com/noellimx/main/controllers/rest/reference/YoutubeReferenceController.java
@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/reference/youtube")
+@RequestMapping("/api/reference/youtube")
 public class YoutubeReferenceController {
 
   final YoutubeReferenceService service;
